Bug 130225 - FILESAVE Cannot save hidden legend entries of pie charts to ODF
Summary: FILESAVE Cannot save hidden legend entries of pie charts to ODF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Pie-and-Donut
  Show dependency treegraph
 
Reported: 2020-01-27 14:19 UTC by NISZ LibreOffice Team
Modified: 2024-10-15 21:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (18.06 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-01-27 14:20 UTC, NISZ LibreOffice Team
Details
The original file saved by Calc as ods (17.87 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-01-27 14:20 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Calc (95.87 KB, image/png)
2020-01-27 14:21 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-01-27 14:19:54 UTC
Description:
It is possible to open/save an xlsx file that contains a deleted pie chart legend entry. 
It is not possible to save this setting to ods format, since there is no export option yet. In bug #51671 a similar feature was implemented for data series, however bar chart has only data points.

Steps to Reproduce:
1. Open attached xlsx file in Calc and save it as ods.

Actual Results:
The legend entry for data point “2” is deleted on opening the xlsx, but not deleted after saving and reopening the file as ods.

Expected Results:
The deleted legend entry stays deleted after ods save & reopen.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2020-01-27 14:20:28 UTC
Created attachment 157456 [details]
Example file from Excel
Comment 2 NISZ LibreOffice Team 2020-01-27 14:20:52 UTC
Created attachment 157457 [details]
The original file saved by Calc as ods
Comment 3 NISZ LibreOffice Team 2020-01-27 14:21:21 UTC
Created attachment 157458 [details]
Screenshot of the original and exported document side by side in Calc
Comment 4 Xisco Faulí 2020-01-28 11:19:43 UTC
Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: aef7feb3e695ecf6d411f0777196dcc4281e201a
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

In previous versions, the hidden legends are displayed at import time ( fixed by https://cgit.freedesktop.org/libreoffice/core/commit/?id=6e847aa817999ab18acd534f9e6a86685bb268fc )
Comment 5 Commit Notification 2020-02-13 10:17:28 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a96ec04a07c35338f5f9a0cb361b9322e5ca9cec

tdf#130225 implement ODF export of deleted legend entries of pie charts

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.