tdf#130225 Chart ODF: fix deleted legend entries of pie charts

The legend showed deleted legend entries of pie charts
after ODF export.

Change-Id: Id24cddefa83e50dde1ec6555d02891753483dd5f